--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "https://github.com/jpotts18/mean-stack-relational.git"
   },
   "engines": {
-    "node": "14.15.x",
+    "node": "14.16.0",
     "npm": "2.14.x"
   },
   "scripts": {
