--- a/.ebextensions/node-settings.config
+++ b/.ebextensions/node-settings.config
@@ -1,5 +1,5 @@
 option_settings:
   aws:elasticbeanstalk:container:nodejs: 
-    NodeCommand: "npm start"
+    NodeCommand: "pm2 start app.js"
     ProxyServer: apache
     GzipCompression: true
