--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "npm": "2.14.x"
   },
   "scripts": {
-    "start": "node node_modules/grunt-cli/bin/grunt",
+    "start": "node node_modules/grunt-cli/bin/grunt && node_modules/pm2/bin/pm2-runtime app.js",
     "test": "node node_modules/grunt-cli/bin/grunt test",
-    "postinstall": "bower install && cp config/env/development.json5.sample config/env/development.json5 && cp config/env/production.json5.sample config/env/production.json5 && node node_modules/grunt-cli/bin/grunt copy"
+    "postinstall": "bower install && cp config/env/development.json5.sample config/env/dev.json5 && cp config/env/production.json5.sample config/env/productions.json5 && node node_modules/grunt-cli/bin/grunt copy"
   },
   "dependencies": {
     "async": "latest",
