--- a/.ebextensions/nodecommand.config
+++ b/.ebextensions/nodecommand.config
@@ -1,4 +1,3 @@
 option_settings:
   aws:elasticbeanstalk:container:nodejs
-    option_name: NodeCommand
-    value: "npm start"
+    NodeCommand: "npm start"
