--- a/.ebextensions/nodecommand.config
+++ b/.ebextensions/nodecommand.config
@@ -1,3 +1,10 @@
-option_settings:
-  aws:elasticbeanstalk:container:nodejs
-    NodeCommand: "npm start"
+{
+    "option_settings":
+    [
+        {
+          "namespace" : "aws:elasticbeanstalk:container:nodejs",
+          "option_name" : "NodeCommand"
+          "value" : "npm start"
+        }
+    ]
+}
