--- a/.ebextensions/nodecommand.config
+++ b/.ebextensions/nodecommand.config
@@ -3,8 +3,7 @@
     [
         {
           "namespace" : "aws:elasticbeanstalk:container:nodejs",
-          "option_name" : "NodeCommand"
-          "value" : "npm start"
+          "NodeCommand" : "npm start"
         }
     ]
 }
