--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
     "npm": "2.14.x"
   },
   "scripts": {
-    "start": "node node_modules/grunt-cli/bin/grunt && node_modules/pm2/bin/pm2-runtime app.js",
-    "test": "node node_modules/grunt-cli/bin/grunt test",
-    "postinstall": "bower install && cp config/env/development.json5.sample config/env/dev.json5 && cp config/env/production.json5.sample config/env/productions.json5 && node node_modules/grunt-cli/bin/grunt copy"
+    "start": "node_modules/pm2/bin/pm2-runtime app.js", 
+    "postinstall": "node ./node_modules/pm2/bin/pm2 logs"
   },
   "dependencies": {
     "async": "latest",
